// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hero Renders the UI snapshot correctly 1`] = `
<div
  className="css-1ar4wny"
  data-responsive-background-image={true}
  data-testid="hero"
  style={
    {
      "backgroundImage": "url(//placekitten.com/1600/800)",
    }
  }
>
  <div
    className="css-0"
    data-testid="hero-content"
    style={{}}
  >
    <h1
      className="chakra-heading css-eyyo6e"
      id="primary-hero"
    >
      Hero Primary
    </h1>
    <div
      className="css-0"
    >
      Example Subtitle
    </div>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 2`] = `
<div
  className="css-0"
  data-responsive-background-image={true}
  data-testid="hero"
  style={{}}
>
  <div
    className="css-0"
    data-testid="hero-content"
    style={{}}
  >
    <div
      className="css-0"
    >
      <div
        className="css-0"
      >
        <img
          alt="Image example"
          className="css-0"
          src="//placekitten.com/800/400"
        />
      </div>
    </div>
    <h1
      className="chakra-heading css-eyyo6e"
      id="secondary-hero"
    >
      Hero Secondary
    </h1>
    <div
      className="css-0"
    >
      Explore our collection of hundreds of online resources and databases. Use our free online content to help with your research, whether it's finding a single article, tracing a family tree, learning a new language, or anything in between.
    </div>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 3`] = `
<div
  className="css-0"
  data-responsive-background-image={true}
  data-testid="hero"
  style={{}}
>
  <div
    className="css-0"
    data-testid="hero-content"
    style={{}}
  >
    <div
      className="css-0"
    >
      <div
        className="css-0"
      >
        <img
          alt="Image example"
          className="css-0"
          src="//placekitten.com/800/400"
        />
      </div>
    </div>
    <h1
      className="chakra-heading css-eyyo6e"
      id="secondary-hero"
    >
      Hero Secondary Books and More
    </h1>
    <div
      className="css-0"
    >
      Explore our collection of hundreds of online resources and databases. Use our free online content to help with your research, whether it's finding a single article, tracing a family tree, learning a new language, or anything in between.
    </div>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 4`] = `
<div
  className="css-0"
  data-responsive-background-image={true}
  data-testid="hero"
  style={{}}
>
  <div
    className="css-0"
    data-testid="hero-content"
    style={{}}
  >
    <div
      className="css-0"
    >
      <div
        className="css-0"
      >
        <img
          alt="Image example"
          className="css-0"
          src="//placekitten.com/800/400"
        />
      </div>
    </div>
    <h1
      className="chakra-heading css-eyyo6e"
      id="secondary-hero"
    >
      Hero Secondary Locations
    </h1>
    <div
      className="css-0"
    >
      Explore our collection of hundreds of online resources and databases. Use our free online content to help with your research, whether it's finding a single article, tracing a family tree, learning a new language, or anything in between.
    </div>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 5`] = `
<div
  className="css-0"
  data-responsive-background-image={true}
  data-testid="hero"
  style={{}}
>
  <div
    className="css-0"
    data-testid="hero-content"
    style={{}}
  >
    <div
      className="css-0"
    >
      <div
        className="css-0"
      >
        <img
          alt="Image example"
          className="css-0"
          src="//placekitten.com/800/400"
        />
      </div>
    </div>
    <h1
      className="chakra-heading css-eyyo6e"
      id="secondary-hero"
    >
      Hero Secondary
    </h1>
    <div
      className="css-0"
    >
      Explore our collection of hundreds of online resources and databases. Use our free online content to help with your research, whether it's finding a single article, tracing a family tree, learning a new language, or anything in between.
    </div>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 6`] = `
<div
  className="css-0"
  data-responsive-background-image={true}
  data-testid="hero"
  style={{}}
>
  <div
    className="css-0"
    data-testid="hero-content"
    style={{}}
  >
    <div
      className="css-0"
    >
      <div
        className="css-0"
      >
        <img
          alt="Image example"
          className="css-0"
          src="//placekitten.com/800/400"
        />
      </div>
    </div>
    <h1
      className="chakra-heading css-eyyo6e"
      id="secondary-hero"
    >
      Hero Secondary What's On
    </h1>
    <div
      className="css-0"
    >
      Explore our collection of hundreds of online resources and databases. Use our free online content to help with your research, whether it's finding a single article, tracing a family tree, learning a new language, or anything in between.
    </div>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 7`] = `
<div
  className="css-0"
  data-responsive-background-image={true}
  data-testid="hero"
  style={{}}
>
  <div
    className="css-0"
    data-testid="hero-content"
    style={{}}
  >
    <h1
      className="chakra-heading css-eyyo6e"
      id="tertiary-hero"
    >
      Hero Tertiary
    </h1>
    <p>
      With 92 locations across the Bronx, Manhattan, and Staten Island, The New York Public Library is an essential part of neighborhoods across the city. Visit us today.
    </p>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 8`] = `
<div
  className="css-1i6sx3l"
  data-responsive-background-image={true}
  data-testid="hero"
>
  <div
    className="css-0"
    data-testid="hero-content"
    style={{}}
  >
    <div
      className="css-1gt4hjv"
    >
      <div
        className="css-0"
      >
        <img
          alt="Image example"
          className="css-0"
          src="//placekitten.com/800/400"
        />
      </div>
    </div>
    <div
      className="css-0"
    >
      <h1
        className="chakra-heading css-eyyo6e"
        id="campaign-hero"
      >
        Hero Campaign
      </h1>
      With 92 locations across the Bronx, Manhattan, and Staten Island, The New York Public Library is an essential part of neighborhoods across the city. Visit us today.
    </div>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 9`] = `
<div
  className="css-0"
  data-responsive-background-image={true}
  data-testid="hero"
  style={{}}
>
  <div
    className="css-0"
    data-testid="hero-content"
    style={{}}
  >
    <div
      className="css-1gt4hjv"
    >
      <div
        className="css-0"
      >
        <img
          alt="Image example"
          className="css-0"
          src="//placekitten.com/800/400"
        />
      </div>
    </div>
    <div
      className="css-0"
    >
      With 92 locations across the Bronx, Manhattan, and Staten Island, The New York Public Library is an essential part of neighborhoods across the city. Visit us today.
    </div>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 10`] = `
<div
  className="css-1ar4wny"
  data-responsive-background-image={true}
  data-testid="hero"
  style={
    {
      "backgroundImage": "url(//placekitten.com/1600/800)",
    }
  }
>
  <div
    className="css-0"
    data-testid="hero-content"
    style={{}}
  >
    <h1
      className="chakra-heading css-eyyo6e"
      id="chakra"
    >
      Hero Primary
    </h1>
    <div
      className="css-0"
    >
      Example Subtitle
    </div>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 11`] = `
<div
  className="css-1ar4wny"
  data-responsive-background-image={true}
  data-testid="hero"
  style={
    {
      "backgroundImage": "url(//placekitten.com/1600/800)",
    }
  }
>
  <div
    className="css-0"
    data-testid="hero-content"
    style={{}}
  >
    <h1
      className="chakra-heading css-eyyo6e"
      id="props"
    >
      Hero Primary
    </h1>
    <div
      className="css-0"
    >
      Example Subtitle
    </div>
  </div>
</div>
`;
